@@ -209,6 +209,24 @@ class TestDiff(PyfitsTestCase):
         assert_true(diff.identical)
         assert_equal(diff.diff_total, 0)
 
+    def test_identical_comp_image_hdus(self):
+        """Regression test for #189.
+
+        For this test we mostly just care that comparing to compressed images
+        does not crash, and returns the correct results.  Two compressed images
+        will be considered identical if the decompressed data is the same.
+        Obviously we test whether or not the same compression was used by
+        looking for (or ignoring) header differences.
+        """
+
+        data = np.arange(100.0).reshape((10, 10))
+        hdu = pyfits.CompImageHDU(data=data)
+        hdu.writeto(self.temp('test.fits'))
+        hdula = pyfits.open(self.temp('test.fits'))
+        hdulb = pyfits.open(self.temp('test.fits'))
+        diff = FITSDiff(hdula, hdulb)
+        assert_true(diff.identical)
+
     def test_different_dimensions(self):
         ia = np.arange(100).reshape((10, 10))
         ib = np.arange(100) - 1
